--- a/Whoaverse/Whoaverse/Content/Whoaverse.css
+++ b/Whoaverse/Whoaverse/Content/Whoaverse.css
@@ -2411,6 +2411,7 @@ textarea.form-control {
             border: 1px solid #DEDEDE;
             border-radius: 2px;
             box-shadow: 0 1px 0 hsla( 0,0%,0%,0.1 );
+            line-height: 30px;
             padding: 4px 6px;
         }
             .link .flat-list.buttons li a:hover {
@@ -2427,6 +2428,7 @@ textarea.form-control {
             border: 1px solid #DEDEDE;
             border-radius: 2px;
             box-shadow: 0 1px 0 hsla( 0,0%,0%,0.1 );
+            line-height: 30px;
             padding: 4px 6px;
         }
             .comment .flat-list.buttons li a:hover {
